Fixed full screen slider on mobile.

--- a/chesnok/markup/static/scss/partials/_royalSlider.scss
+++ b/chesnok/markup/static/scss/partials/_royalSlider.scss
@@ -1087,7 +1087,7 @@ table.tc-variables-table tbody tr:hover td {
   overflow: hidden;
   float: left;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  margin-bottom: 2rem;
+  //margin-bottom: 2rem;
   padding-bottom: 2rem;
   border-bottom: .1rem solid $mischka;
 }
